swagger naming conventions
