# lib/routes/post.js
@@ -94,7 +94,7 @@ var post = function (router) {
      * This route is used to handle users login.
      */
     router
-        .route("/login_user")
+        .route("/user/login")
         .post(VerifyToken_1.default, function (req, res) { return __awaiter(_this, void 0, void 0, function () {
         var body, email, user, confirmation_code, confirmation_token;
         return __generator(this, function (_a) {
@@ -243,7 +243,7 @@ var post = function (router) {
      * This route is used to assign a place to a user.
      */
     router
-        .route("/take_place")
+        .route("/places/take-place")
         .post(VerifyToken_1.default, function (req, res) { return __awaiter(_this, void 0, void 0, function () {
         var body, id_place, id_user, place, placeIsAllowed, placeIsAvailable, _a, user, name_1, fname, historical, beginDate;
         var _this = this;
@@ -336,7 +336,7 @@ var post = function (router) {
         });
     }); });
     router
-        .route("/leave_place")
+        .route("/places/leave")
         .post(VerifyToken_1.default, function (req, res) { return __awaiter(_this, void 0, void 0, function () {
         var body, id_user, historical, endDate;
         return __generator(this, function (_a) {
@@ -367,7 +367,7 @@ var post = function (router) {
      * This route is used to add a friend.
      */
     router
-        .route("/add_friend")
+        .route("/users/add")
         .post(VerifyToken_1.default, function (req, res) {
         var body = req.body;
         RES = res;
@@ -395,7 +395,7 @@ var post = function (router) {
      * This route is used to remove a friend.
      */
     router
-        .route("/remove_friend")
+        .route("/users/remove")
         .post(VerifyToken_1.default, function (req, res) {
         var body = req.body;
         RES = res;
@@ -415,7 +415,7 @@ var post = function (router) {
         });
     });
     router
-        .route("/settings_user")
+        .route("/user/settings")
         .post(VerifyToken_1.default, function (req, res) {
         var body = req.body;
         var id_user = test_1.encrypt(body.id_user, req.userId);
